Add interview Q17-Q25: JVM & Memory + Modern Java Features 8-21
Q17: Stack vs Heap, Metaspace, Escape Analysis, OOM types, container flags.
Q18: Generational GC, G1GC vs ZGC, Stop-the-World, production JVM flags.
Q19: Functional interfaces, lambda expressions, method references, composition.
Q20: Stream API, lazy evaluation, flatMap, parallel streams, toList() vs Collectors.
Q21: Optional, orElse vs orElseGet, chaining, best practices.
Q22: Generics, type erasure, PECS (Producer Extends Consumer Super).
Q23: Records, sealed classes, pattern matching in switch.
Q24: Virtual threads, pinning, ThreadLocal, reactive vs virtual comparison.
Q25: Key features by Java LTS version (8, 11, 17, 21).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>